--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,8 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <%- include("css.ejs")%>
 </head>
 <body>
-thanh
+    <%- include("header.ejs")%>
+    <%- include("banner.ejs")%>
+    <%- include("content1.ejs")%>
+    <%- include("content2.ejs")%>
+    <%- include("content3.ejs")%>
+    <%- include("footer.ejs")%>
 </body>
 </html>
