--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,4 +16,5 @@
     <%- include("content3.ejs")%>
     <%- include("footer.ejs")%>
 </body>
+<script type="text/javascript" src="public/jQuery/jquery3.6.0.js"></script>
 </html>
