--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,15 +1,68 @@
 .address{
     margin: auto;
-    padding: 10px;
-    background-color: #f33232;
-    font-size: 20px;
+    padding: 15px;
+    background-color: #dc3545;
+    font-size: 22px;
     color: #eeeeee;
 }
 a{
-
+    text-decoration: none;
     color: #eeeeee;
 }
 a:hover{
     text-decoration: none;
-    color: #2eee5b;
+    color: #eeeeee;
+}
+.menu {
+    background-color: #fff;
+    width: 100%;
+    height: 60px;
+}
+.menu ul {
+    background-color: #fff;
+    text-align: center;
+    list-style: none;
+    font-size: 18px;
+
+}
+.menu ul li ul {
+    display: none;
+    opacity: 0;
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    background-color: #fff;
+    transform: all .5s;
+
+
+}
+.menu ul li ul:hover {
+    display: block;
+    opacity: 1;
+}
+.menu ul li ul li {
+    width: 100%;
+}
+.menu ul li ul li ul {
+    position: absolute;
+    top: 0;
+    left: 100%;
+}
+.menu li {
+    width: 25%;
+    float: left;
+    position: relative;
+}
+.menu li a {
+    display: block;
+    color: #131313;
+    line-height: 60px;
+}
+.menu li a:hover {
+    background-color: #f0f0f0;
+    color: red;
+}
+.menu li a:hover + ul {
+    display: block;
+    opacity: 1;
 }
