--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,15 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <%- include("css.ejs")%>
 </head>
 <body>
     <%- include("header.ejs")%>
+    <%- include("nav.ejs")%>
     <%- include("banner.ejs")%>
     <%- include("content1.ejs")%>
     <%- include("content2.ejs")%>
     <%- include("content3.ejs")%>
     <%- include("footer.ejs")%>
 </body>
-<script type="text/javascript" src="public/jQuery/jquery3.6.0.js"></script>
+<script type="text/javascript" src="/jQuery/jquery3.6.0.js"></script>
 </html>
