--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,38 @@
 <footer class="full-screen-preview">
 
-        footer
+
+        <div class="container">
+                <div class="footer-trai">
+                        <div>
+
+                                <ul>
+                                        <p>USEFUL LINKS</p>
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">About US</a></li>
+                                        <li><a href="#">Services</a></li>
+                                        <li><a href="#">Contact US</a></li>
+
+                                </ul>
+                        </div>
+                </div>
+                <div class="footer-phai">
+                        <div>
+                                <ul>
+                                        <p>CONTACT INFOR</p>
+                                        <li><i class="fa-solid fa-location-crosshairs"></i><a href="#"> 8 Ton That Thuyet, Cau Giay, Hanoi</a></li>
+                                        <li><i class="fa-solid fa-phone"></i><a href="#"> Hotline 24/7: 0329.226.456</a></li>
+                                        <li><i class="fa-solid fa-envelope"></i><a href="#"> info@cariomoto.com</a></li>
+                                        <div class="my-icon">
+                                                <a href="#" style="font-size: 35px "><i class="fa-brands fa-facebook"></i></a>
+                                                <a href="#" style="font-size: 35px"> <i class="fa-brands fa-facebook-messenger"></i></a>
+                                                <a href="#" style="font-size: 35px"><i class="fa-brands fa-youtube"></i></a>
+                                                <a href="#" style="font-size: 35px"><i class="fa-brands fa-linkedin"></i></a>
+                                        </div>
+                                </ul>
+                        </div>
+
+
+                </div>
+        </div>
 
 </footer>
