--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,6 +16,7 @@
     <%- include("content1.ejs")%>
     <%- include("content2.ejs")%>
     <%- include("content3.ejs")%>
+    <%- include("intro-section.ejs")%>
     <%- include("footer.ejs")%>
 </body>
 <script type="text/javascript" src="/jQuery/jquery3.6.0.js"></script>
