--- a/views/css.ejs
+++ b/views/css.ejs
@@ -5,4 +5,6 @@
 <link rel="stylesheet" href="/css/nav.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <link rel="stylesheet" href="/css/megamenu.css">
+<link rel="stylesheet" href="/css/intro-section.css">
+<link rel="stylesheet" href="/css/footer.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
