--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,9 +1,5 @@
 <div class="full-screen-preview">
-    <div class="row address ">
-        <div class="col-md-4"><i class="fa-solid fa-location-crosshairs"></i><a href="#"> 8 Ton That Thuyet, Cau Giay, Hanoi</a></div>
-        <div class="col-md-4"><i class="fa-solid fa-phone"></i><a href="#"> Hotline 24/7: 0329.226.456</a></div>
-        <div class="col-md-4"><i class="fa-solid fa-envelope"></i><a href="#"> info@cariomoto.com</a></div>
-    </div>
+        <div class="header">
+          <a href="#"><i class="fa-solid fa-car"></i> CARRIO MOTOS </a>
+        </div>
 </div>
-<header class="full-screen-preview">
-</header>
