--- a/public/css/megamenu.css
+++ b/public/css/megamenu.css
@@ -22,7 +22,7 @@ li {
   display: none;
 }
 .mega-menu.sticky-header {
-  position: fixed;
+  /*position: fixed;*/
   top: 0;
 }
 .mega-menu a {
@@ -117,6 +117,10 @@ li {
   display: block;
   float: left;
   width: 100%;
+  position: absolute;
+  top: 100px;
+  z-index: 100;
+
 }
 .mega-menu .menu-dropdown .menu-item-wrapper {
   display: none;
@@ -227,6 +231,7 @@ li {
     top: 71px;
     z-index: 99;
     background: white;
+    z-index: 100;
   }
   .mega-menu.sticky-header.responsive-menu .menu-dropdown .menu-item-wrapper .back-link {
     display: block;
