--- a/views/banner.ejs
+++ b/views/banner.ejs
@@ -1,3 +1,20 @@
-<div class="full-screen-preview">
-    <div class="full-screen-preview">banner</div>
-</div>
+<link rel="stylesheet" href="/nivoslider/default/default.css">
+<link rel="stylesheet" href="/nivoslider/nivo-slider.css">
+    <div class="full-screen-preview" >
+        <div class="my-slide">
+            <div class="theme-default">
+                <div id="slider" class="nivoSlider">
+                    <img src="/slide/slide_2.jpg" data-thumb="/slide/slide_2.jpg"/>
+                    <img src="/slide/slide_3.jpg" data-thumb="/slide/slide_3.jpg"/>
+                    <img src="/slide/slide_2.jpg"data-thumb="/slide/slide_2.jpg"/>
+                    <img src="/slide/slide_3.jpg"data-thumb="/slide/slide_3.jpg"/>
+                </div>
+            </div>
+        </div>
+    </div>
+<script type="text/javascript" src="/jQuery/jquery3.6.0.js"></script>
+<script type="text/javascript" src="/nivoslider/jquery.nivo.slider.js">
+</script>
+<script type="text/javascript">// scrip để chạy nivo-slide
+    $('#slider').nivoSlider();
+</script>
