--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,5 +1,4 @@
-<nav class="section nav">
-    <div class="container">
+<div class="full-screen-preview">
         <nav>
             <div class="mega-menu menuClass">
                 <div class="mobile-nav-icon">
@@ -9,28 +8,17 @@
                 </div>
                 <div class="main-links">
                     <ul>
-                        <li><a data-submenu="products" href="#">Products</a></li>
-                        <li><a data-submenu="career" href="#">Career</a></li>
-                        <li><a data-submenu="resources"  href="#">Resources</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a data-submenu="support"  href="#">Support</a></li>
+                        <li><a data-submenu="support"  href="#">Cars Lines</a></li>
+                        <li><a data-submenu="support"  href="#">Car Buying Advice</a></li>
+                        <li><a data-submenu="support"  href="#">Services</a></li>
+                        <li><a data-submenu="support"  href="#">Car World</a></li>
+                        <li><a href="#">Search <i class="fa-solid fa-magnifying-glass"style="font-size: 14px"></i></a></li>
+                        <li><a><marquee>CARRIO MOTOS very pleased to serve you</marquee></a></li>
+                        <li><a><i class="fa-solid fa-phone"></i> Hotline 24/7: 0329.226.456</a></li>
                     </ul>
+
                 </div>
                 <div class="menu-dropdown">
-                    <ul class="menu-item-wrapper" id="products">
-                        <li class="link-category">Something</li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">products</a></li>
-                        <li class="link-category">Something</li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">products</a></li>
-                    </ul>
 
                     <ul class="menu-item-wrapper dropdown" id="support">
                         <li><a href="#">Support</a></li>
@@ -38,46 +26,29 @@
                         <li><a href="#">Support</a></li>
                         <li><a href="#">Support</a></li>
                     </ul>
+                    <ul class="menu-item-wrapper dropdown" id="support">
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                    <ul class="menu-item-wrapper dropdown" id="support">
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                    <ul class="menu-item-wrapper dropdown" id="support">
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
 
-                    <ul class="menu-item-wrapper" id="career">
-                        <li><a href="#">career</a></li>
-                        <li><a href="#">career</a></li>
-                        <li><a href="#">career</a></li>
-                        <li><a href="#">career</a></li>
-                    </ul>
-                    <ul class="menu-item-wrapper" id="resources">
-                        <li><a href="#">Resoiurces</a></li>
-                        <li><a href="#">Resoiurces</a></li>
-                        <li><a href="#">Resoiurces</a></li>
-                        <li><a href="#">Resoiurces</a></li>
-                    </ul>
                 </div>
             </div>
         </nav>
-    </div>
-
-    <script type="text/javascript" src="megamenu.js"> </script>
-
-</nav>
-<script type="text/javascript" src="megamenu.js">$(".mega-menu").megaMenu();</script>
-<script type="text/javascript" src="megamenu.js">$(".mega-menu").megaMenu({menuBehaviour: "mouseover"});</script>
-<script type="text/javascript" src="megamenu.js">$(".mega-menu").megaMenu({
-        caret:"",
-        caretArrows: [{
-            up: "",
-            down: "",
-            upUrl:"",
-            downUrl:"",
-        }]
-    });</script>
-<script type="text/javascript"src="megamenu.js">$(".mega-menu").megaMenu({
-        animation:true,
-        animationClass:"animated fadeIn"
-    });</script>
-<script type="text/javascript" src="megamenu.js">$(".mega-menu").megaMenu({
-        highlighter: true,
-        followingHighlighter: false,
-        highlightColor:"",
-        textHighlighterColor: ""
-    });
-</script>
+</div>
+<script type="text/javascript" src="/jQuery/jquery3.6.0.js"></script>
+<script type="text/javascript" src="megamenu.js"> </script>
+<script type="text/javascript">$(".mega-menu").megaMenu();</script>
