--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -8,7 +8,7 @@
                 </div>
                 <div class="main-links">
                     <ul>
-                        <li><a data-submenu="support"  href="#">Cars Lines</a></li>
+                        <li><a data-submenu="car-line"  href="#">Cars Lines</a></li>
                         <li><a data-submenu="support"  href="#">Car Buying Advice</a></li>
                         <li><a data-submenu="support"  href="#">Services</a></li>
                         <li><a data-submenu="support"  href="#">Car World</a></li>
@@ -20,11 +20,11 @@
                 </div>
                 <div class="menu-dropdown">
 
-                    <ul class="menu-item-wrapper dropdown" id="support">
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
+                    <ul class="menu-item-wrapper dropdown" id="car-line">
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
                     </ul>
                     <ul class="menu-item-wrapper dropdown" id="support">
                         <li><a href="#">Support</a></li>
