--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,5 @@
 <div class="full-screen-preview">
         <div class="header">
-          <a href="#"><i class="fa-solid fa-car"></i> CARRIO MOTOS </a>
+          <a href="/"><i class="fa-solid fa-car"></i> CARRIO MOTOS </a>
         </div>
 </div>
