--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -9,9 +9,9 @@
                 <div class="main-links">
                     <ul>
                         <li><a data-submenu="car-line"  href="#">Cars Lines</a></li>
-                        <li><a data-submenu="support"  href="#">Car Buying Advice</a></li>
-                        <li><a data-submenu="support"  href="#">Services</a></li>
-                        <li><a data-submenu="support"  href="#">Car World</a></li>
+                        <li><a data-submenu="car-buying-advice"  href="#">Car Buying Advice</a></li>
+                        <li><a data-submenu="service"  href="#">Services</a></li>
+                        <li><a data-submenu="car-world"  href="#">Car World</a></li>
                         <li><a href="#">Search <i class="fa-solid fa-magnifying-glass"style="font-size: 14px"></i></a></li>
                         <li><a><marquee>CARRIO MOTOS very pleased to serve you</marquee></a></li>
                         <li><a><i class="fa-solid fa-phone"></i> Hotline 24/7: 0329.226.456</a></li>
@@ -21,28 +21,26 @@
                 <div class="menu-dropdown">
 
                     <ul class="menu-item-wrapper dropdown" id="car-line">
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
+                        <li><a href="#">Mercedes</a></li>
+                        <li><a href="#">BMW</a></li>
+                        <li><a href="#">Toyota</a></li>
+                        <li><a href="#">Hyundai</a></li>
+                        <li><a href="#">Kia</a></li>
                     </ul>
-                    <ul class="menu-item-wrapper dropdown" id="support">
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
+                    <ul class="menu-item-wrapper dropdown" id="car-buying-advice">
+                        <li><a href="#">Sign up for a test drive</a></li>
+                        <li><a href="#">Dealer list</a></li>
+                        <li><a href="#">Car price list</a></li>
                     </ul>
-                    <ul class="menu-item-wrapper dropdown" id="support">
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
+                    <ul class="menu-item-wrapper dropdown" id="service">
+                        <li><a href="#">Repair</a></li>
+                        <li><a href="#">Insurance</a></li>
+                        <li><a href="#">Accessary</a></li>
                     </ul>
-                    <ul class="menu-item-wrapper dropdown" id="support">
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Support</a></li>
+                    <ul class="menu-item-wrapper dropdown" id="car-world">
+                        <li><a href="#">Creation</a></li>
+                        <li><a href="#">Design and ideas</a></li>
+                        <li><a href="#">Develop</a></li>
                     </ul>
 
                 </div>
