--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
     <%- include("header.ejs")%>
     <%- include("nav.ejs")%>
     <%- include("banner.ejs")%>
-    <%- include("content1.ejs")%>
+    <%- include("best-selling-car-list.ejs")%>
     <%- include("content2.ejs")%>
     <%- include("content3.ejs")%>
     <%- include("intro-section.ejs")%>
