--- a/views/intro-section.ejs
+++ b/views/intro-section.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/intro-section.css">
 <div class="full-screen-preview intro">
     <div class="container">
             <div class="intro-trai">
