--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,51 +1,47 @@
+<link rel="stylesheet" href="/css/megamenu.css"/>
 <div class="full-screen-preview">
-        <nav>
-            <div class="mega-menu menuClass">
-                <div class="mobile-nav-icon">
-                    <a class="" href="#">
-                        <span class="fa fa-bars"></span>
-                    </a>
-                </div>
-                <div class="main-links">
-                    <ul>
-                        <li><a data-submenu="car-line"  href="#">Cars Lines</a></li>
-                        <li><a data-submenu="car-buying-advice"  href="#">Car Buying Advice</a></li>
-                        <li><a data-submenu="service"  href="#">Services</a></li>
-                        <li><a data-submenu="car-world"  href="#">Car World</a></li>
-                        <li><a href="#">Search <i class="fa-solid fa-magnifying-glass"style="font-size: 14px"></i></a></li>
-                        <li><a><marquee>CARRIO MOTOS very pleased to serve you</marquee></a></li>
-                        <li><a><i class="fa-solid fa-phone"></i> Hotline 24/7: 0329.226.456</a></li>
-                    </ul>
+    <nav>
+        <div class="mega-menu menuClass">
+            <div class="main-links">
+                <ul>
+                    <li><a data-submenu="car-line"  href="#">Cars Lines</a></li>
+                    <li><a data-submenu="car-buying-advice"  href="#">Car Buying Advice</a></li>
+                    <li><a data-submenu="service"  href="#">Services</a></li>
+                    <li><a data-submenu="car-world"  href="#">Car World</a></li>
+                    <li><a href="#">Search <i class="fa-solid fa-magnifying-glass"style="font-size: 14px"></i></a></li>
+                    <li><a><marquee>CARRIO MOTOS very pleased to serve you</marquee></a></li>
+                    <li><a><i class="fa-solid fa-phone"></i> Hotline 24/7: 0329.226.456</a></li>
+                </ul>
 
-                </div>
-                <div class="menu-dropdown">
-
-                    <ul class="menu-item-wrapper dropdown" id="car-line">
-                        <li><a href="#">Mercedes</a></li>
-                        <li><a href="#">BMW</a></li>
-                        <li><a href="#">Toyota</a></li>
-                        <li><a href="#">Hyundai</a></li>
-                        <li><a href="#">Kia</a></li>
-                    </ul>
-                    <ul class="menu-item-wrapper dropdown" id="car-buying-advice">
-                        <li><a href="#">Sign up for a test drive</a></li>
-                        <li><a href="#">Dealer list</a></li>
-                        <li><a href="#">Car price list</a></li>
-                    </ul>
-                    <ul class="menu-item-wrapper dropdown" id="service">
-                        <li><a href="#">Repair</a></li>
-                        <li><a href="#">Insurance</a></li>
-                        <li><a href="#">Accessary</a></li>
-                    </ul>
-                    <ul class="menu-item-wrapper dropdown" id="car-world">
-                        <li><a href="#">Creation</a></li>
-                        <li><a href="#">Design and ideas</a></li>
-                        <li><a href="#">Develop</a></li>
-                    </ul>
-
-                </div>
             </div>
-        </nav>
+            <div class="menu-dropdown">
+
+                <ul class="menu-item-wrapper dropdown" id="car-line">
+                    <li><a href="#">Mercedes</a></li>
+                    <li><a href="#">BMW</a></li>
+                    <li><a href="#">Toyota</a></li>
+                    <li><a href="#">Hyundai</a></li>
+                    <li><a href="#">Kia</a></li>
+                </ul>
+                <ul class="menu-item-wrapper dropdown" id="car-buying-advice">
+                    <li><a href="#">Sign up for a test drive</a></li>
+                    <li><a href="#">Dealer list</a></li>
+                    <li><a href="#">Car price list</a></li>
+                </ul>
+                <ul class="menu-item-wrapper dropdown" id="service">
+                    <li><a href="#">Repair</a></li>
+                    <li><a href="#">Insurance</a></li>
+                    <li><a href="#">Accessary</a></li>
+                </ul>
+                <ul class="menu-item-wrapper dropdown" id="car-world">
+                    <li><a href="#">Creation</a></li>
+                    <li><a href="#">Design and ideas</a></li>
+                    <li><a href="#">Develop</a></li>
+                </ul>
+
+            </div>
+        </div>
+    </nav>
 </div>
 <script type="text/javascript" src="/jQuery/jquery3.6.0.js"></script>
 <script type="text/javascript" src="megamenu.js"> </script>
