--- a/views/best-selling-car-list.ejs
+++ b/views/best-selling-car-list.ejs
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="/css/best-selling-car-list.css">
 </head>
 <body>
-<div class="">
     <div class="container">
         <div class="row">
             <h3 id="selling">BEST-SELLING-CAR-LIST</h3>
+            <div class="title-border">
+                <div class="title-border-inner"></div>
+                <div class="title-border-inner"></div>
+                <div class="title-border-inner"></div>
+                <div class="title-border-inner"></div>
+            </div>
 
             <div class="list-selling-car col-md-4">
                 <a href="#"><img src="/demo-list/demo-list.png"/></a>
@@ -62,6 +67,5 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
