--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,8 +15,7 @@
     <%- include("nav.ejs")%>
     <%- include("banner.ejs")%>
     <%- include("best-selling-car-list.ejs")%>
-    <%- include("content2.ejs")%>
-    <%- include("content3.ejs")%>
+    <%- include("car-discount.ejs")%>
     <%- include("intro-section.ejs")%>
     <%- include("footer.ejs")%>
 
