--- a/views/best-selling-car-list.ejs
+++ b/views/best-selling-car-list.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <h3 id="selling">BEST-SELLING-CAR-LIST</h3>
+            <h3 id="selling"><b>BEST-SELLING-CAR-LIST</b></h3>
             <div class="title-border">
                 <div class="title-border-inner"></div>
                 <div class="title-border-inner"></div>
