--- a/views/car-discount.ejs
+++ b/views/car-discount.ejs
@@ -2,7 +2,7 @@
 <body>
 <div class="container">
     <div class="row">
-        <h3 id="car-discount">CAR DISCOUNT</h3>
+        <h3 id="car-discount"><b>CAR DISCOUNT</b></h3>
         <div class="title-border2">
             <div class="title-border-inner2"></div>
             <div class="title-border-inner2"></div>
