--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -4,13 +4,13 @@
         <div class="mega-menu menuClass">
             <div class="main-links">
                 <ul>
-                    <li><a data-submenu="car-line"  href="#">Cars Lines</a></li>
-                    <li><a data-submenu="car-buying-advice"  href="#">Car Buying Advice</a></li>
-                    <li><a data-submenu="service"  href="#">Services</a></li>
-                    <li><a data-submenu="car-world"  href="#">Car World</a></li>
-                    <li><a href="#">Search <i class="fa-solid fa-magnifying-glass"style="font-size: 14px"></i></a></li>
-                    <li><a><marquee>CARRIO MOTOS very pleased to serve you</marquee></a></li>
-                    <li><a><i class="fa-solid fa-phone"></i> Hotline 24/7: 0329.226.456</a></li>
+                    <li><a data-submenu="car-line"  href="#"><b>CAR LINES</b></a></li>
+                    <li><a data-submenu="car-buying-advice"  href="#"><b>CAR BUYING ADVICE</b></a></li>
+                    <li><a data-submenu="service"  href="#"><b>SERVICES</b></a></li>
+                    <li><a data-submenu="car-world"  href="#"><b>CAR WORLD</b></a></li>
+                    <li><a href="#"><b>SEARCH</b><i class="fa-solid fa-magnifying-glass"style="font-size: 14px"></i></a></li>
+                    <li><a><marquee><b>CARRIO MOTOS VERY PLEASED TO SERVE YOU</b></marquee></a></li>
+                    <li><a><i class="fa-solid fa-phone"></i><b>HOTlINE 24/7: 0329.226.456</b></a></li>
                 </ul>
 
             </div>
