--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,6 +16,7 @@
     <%- include("banner.ejs")%>
     <%- include("best-selling-car-list.ejs")%>
     <%- include("car-discount.ejs")%>
+    <%- include("our-agent.ejs")%>
     <%- include("intro-section.ejs")%>
     <%- include("footer.ejs")%>
 
