--- a/public/css/our-agent.css
+++ b/public/css/our-agent.css
@@ -4,30 +4,50 @@ body{
     font-weight: 400;
     text-align: left;
 }
-.list-selling-car{
+.agent{
     float: left;
-    width: calc(33.33% - 20px);
+    width: calc(25% - 20px);
     margin: 10px;
     padding: 15px;
     border-radius: 15px;
 }
-.list-selling-car i {
+.agent i {
     color: #dc3545;
+}
+.agent h4 {
+    text-align: center;
+}
+.agent p {
+    text-align: center;
 }
 img{
     max-width: 100%;
 
 }
-#selling{
+#our-agent{
     text-align: center;
 }
-.list-selling-car:hover{
-    box-shadow: 0 5px 5px red;
-    box-sizing: border-box;
+.agent:hover{
     -webkit-transform: translateY(-5px);
     transform: translateY(-5px);
 
 }
+.thumb{
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+.agent:hover .thumb:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(358deg, #f0151f 8%, #f0151f4d 82%)!important;
+    opacity: .5;
+}
+
 .title-border{
     background-color: #dc3545;
 }
