--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/header.css">
 <div class="full-screen-preview">
-    <div class="header">
-        <a href="/"><i class="fa-solid fa-car"></i> CARRIO MOTOS </a>
-    </div>
+        <div class="lo-go">
+                <a href="/"><i class="fa-solid fa-car"></i> CARRIO MOTOS </a>
+        </div>
 </div>
