--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,17 @@
 <link rel="stylesheet" href="/css/header.css">
-<div class="full-screen-preview">
-        <div class="lo-go">
-                <a href="/"><i class="fa-solid fa-car"></i> CARRIO MOTOS </a>
+<div class="section container hea-der">
+        <div class="row">
+                <div class="col-md-3 lo-go">
+                        <a href="/"><h3>CARRIO MOTOS</h3></a>
+                </div>
+
+                <div class="col-md-9">
+                        <div class="box">
+                                <div class="container-1">
+                                        <span class="icon"><i class="fa fa-search"></i></span>
+                                        <input type="search" id="search" placeholder="Search..." />
+                                </div>
+                        </div>
+                </div>
         </div>
 </div>
