--- a/views/warranty.ejs
+++ b/views/warranty.ejs
@@ -24,30 +24,35 @@
                 </div>
                 <div class="col-md-9">
                     <div class="dropdown service">
-                            <a href="#" id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                 Warranties
-                                <span class="caret"></span>
-                            </a>
+                        <a href="#" id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Warranties
+                            <span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu" aria-labelledby="dLabel">
                             <%for(var i =0;i<brandList.length;i++){%>
                             <li><a href="/warranty?BrName=<%=brandList[i].BrName%>"><%=brandList[i].BrName%></a></li>
                             <%}%>
                         </ul>
                     </div>
-                     <div class="dropdown service">
-                            <a href="#" id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                 Phu Tung
-                                <span class="caret"></span>
-                            </a>
+                    <div class="dropdown service">
+                        <a href="#" id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Phu Tung
+                            <span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu" aria-labelledby="dLabel">
                             <%for(var i =0;i<brandList.length;i++){%>
-                            <li><a href="#"><%=brandList[i].BrName%></a></li>
+                            <li><a href="/warranty?BrName=<%=brandList[i].BrName%>"><%=brandList[i].BrName%></a></li>
                             <%}%>
                         </ul>
                     </div>
                     <div class="service"><a href="#" >Sua Chua & Cham Soc</a></div>
                 </div>
-                <div>
+                <div class="col-md-12">
+                    <%for(var i =0;i<brandWarrantyList.length;i++){%>
+
+                    <p><%=brandWarrantyList[i].BrWarranty%></p>
+
+                    <%}%>
                 </div>
             </article>
         </div>
