--- a/views/baohanh.ejs
+++ b/views/baohanh.ejs
@@ -7,11 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BaoHanh</title>
     <link rel="stylesheet" href="/css/service.css"/>
-
 </head>
 <%- include("css.ejs") %>
-
-
 <body>
 <%- include("header.ejs") %>
 <%- include("nav.ejs")%>
@@ -19,35 +16,152 @@
     <div class="container">
         <div class="row">
             <article class="content col-md-12">
-                <div class="col-md-3">
-                    <h5>Service & Workshop</h5>
-                </div>
-                <div class="col-md-9">
-                    <div class="dropdown service">
-                            <a href="#" id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                 Warranties
-                                <span class="caret"></span>
-                            </a>
-                        <ul class="dropdown-menu" aria-labelledby="dLabel">
-                            <%for(var i =0;i<brandList.length;i++){%>
-                            <li><a href="/warranty?BrName=<%=brandList[i].BrName%>"><%=brandList[i].BrName%></a></li>
-                            <%}%>
-                        </ul>
-                    </div>
-                     <div class="dropdown service">
-                            <a href="#" id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                 Phu Tung
-                                <span class="caret"></span>
-                            </a>
-                        <ul class="dropdown-menu" aria-labelledby="dLabel">
-                            <%for(var i =0;i<brandList.length;i++){%>
-                            <li><a ref="/phutung?BrName=<%=brandList[i].BrName%>"><%=brandList[i].BrName%></a></li>
-                            <%}%>
-                        </ul>
-                    </div>
-                    <div class="service"><a href="#" >Sua Chua & Cham Soc</a></div>
+                <div class="baohanh-service">
+                     <div class="col-md-12">
+                       <h3 class="service" style="color: red">Service & Workshop</h3>
+                     <div class="service"><a href="#" ><h3>Warranty</h3></a></div>
+                      <div class="service"><a href="#" ><h3>Accessary</h3></a></div>
+                      <div class="service"><a href="#" ><h3>Repair</h3></a></div>
+                     </div>
+                 </div>
+                 <div class="warranty-image">
+                    <img src="/img/baotri.jpeg" width="1680">
+                 </div>
+                <div class="warranties col-md-12">
+                    <h4>Warranties</h4>
+                    <hr>
+                    <h2><b>Gladly living up to our responsibilities.</b></h2>
                 </div>
                 <div>
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab"><b>Manufacturer Warranty</b></a></li>
+                        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><b>Spare Parts Warranty</b></a></li>
+                        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><b>Extended Warranty Programme</b></a></li>
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="home">
+                            <div class="col-md-7 warranty-container">
+                                <h4>On the safe side from the outset.</h4>
+                                <br>
+                                <h6>Cario Motor PASSENGER CARS</h6>
+                                <p>A three-year new vehicle warranty with unlimited mileage from the date of invoicing to the customer has been provided on all passenger cars throughout Vietnam. </p>
+                                <br>
+                                <h6>Cario Motor PASSENGER CARS</h6>
+                                <p>A three-year new vehicle warranty as of the date of invoicing to the customer or 200,000 km (whichever comes first) has been provided on all  Vans throughout Vietnam.</p>
+                                <br>
+                                <p>(*) Invoice date is based on the sales invoice that authorized dealers provide to first buyers.</p>
+                            </div>
+                            <div class="col-md-4 warranty-img">
+                                <img src="/img/baohanh1.jpeg" height="286px">
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="profile">
+                            <div class="col-md-7 warranty-container">
+                                <h4>The seal of quality for spare parts.</h4>
+                                <br>
+                                <p>Carrio Motor genuine parts come with two-year warranty unlimited mileage from the date of installation at Carrio Motor Vietnam authorized dealers. </p>
+                            </div>
+                            <div class="col-md-4 warranty-img">
+                                <img src="/img/phutung.jpeg">
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="messages">
+                            <div class="col-md-7 warranty-img">
+                                <img src="/img/baohanh2.jpeg">
+
+                            </div>
+                            <div class="col-md-4 warranty-container">
+                                <h4>Worry-free to enjoy the ride.</h4>
+                                <br>
+                                <h6>Flexibility</h6>
+                                <p>The Extended Limited Warranty Programme offers 1-year & 2-year plans for you to choose from. </p>
+                                <br>
+                                <h6>Unlimited mileage Coverage</h6>
+                                <p>You will be enjoying additional 1-year or 2-year extended warranty with unlimited mileage coverage.</p>
+                                <br>
+                                <h6>Higher Resale Value</h6>
+                                <p>When you decide to sell your Carrio Motor, the Extended Limited Warranty will help you to get a better price for it.</p>
+                                <br>
+                                <h6>Repair Warranty</h6>
+                                <p>In unlikely event that the part should be faulty, all Mercedes-Benz parts that are replaced under this Extended Limited Warranty are also covered by an additional 24-month Carrio Motor Parts Warranty & will be replaced at no cost at our authorized service network.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="warranties col-md-12">
+                        <h4>Safety</h4>
+                        <hr>
+                        <h2><b>Safety has a home.</b></h2>
+                    </div>
+                    <div class="warranty-video">
+                        <iframe width="1140" height="379" src="https://www.youtube.com/embed/1UPzmsmAHvw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>The decision to purchase a Carrio Motor is always a decision in favour of safety and quality. The most cutting-edge high-strength materials, complex body structures made of steel and aluminium, and the networked vehicle electronics in the active and passive safety systems require not only knowledge of the correct procedures for repair but also the proper workshop equipment. Don't leave your safety to chance – leave it instead to the specialists from Carrio Motor.</p>
+                    </div>
+                    <div class="warranties col-md-12">
+                        <h4>Small Repair</h4>
+                        <hr>
+                        <h2><b>Combat the traces of everyday wear.</b></h2>
+                    </div>
+                    <div class="warranty-repair col-md-12">
+                        <div class="col-md-5 warranty-img">
+                            <img src="/img/baohanh3.jpeg" height="263">
+
+                        </div>
+                        <div class="col-md-6 warranty-container">
+                            <h3>A scratch in the outside mirror on the way to your holiday destination – what now?</h3>
+                            <p>Carrio Motor helps</p>
+                            <br>
+                            <p>Scratches, dents or stone chip can hardly be avoided during the service life of a vehicle. That is what Carrio Motor SmallRepair is all about. Innovative repair methods make minor damage inside and out disappear quickly and, above all, at a reasonable price – without requiring the replacement of entire parts. All with the accustomed high standard of proven Carrio Motor quality, of course.</p>
+                            <button class="csw-btn-button" type="button" onclick="location.href='/phutung';"><span class="glyphicon glyphicon-triangle-right"></span>  Find nearest authorized workshop</button>
+                        </div>
+                    </div>
+                    <div class="warranties col-md-12">
+                        <h4>Accident Repair</h4>
+                        <hr>
+                        <h2><b>The matching solution for any issue.</b></h2>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="col-md-6 warranty-container">
+                            <h3>"Arranged to go to a party and caught up in a collision? What can I do?"</h3>
+                            <p>Carrio Motor helps</p>
+                            <br>
+                            <p>Even damage after a collision and major accident damage is carefully rectified by experienced Carrio Motor specialists: thanks to accurately matching methods that meet the requirements and demands of the material and with special manufacturer expertise. Consequently your Mercedes will technically and visually remain an original.</p>
+                            <button class="csw-btn-button" type="button" onclick="location.href='/phutung';"><span class="glyphicon glyphicon-triangle-right"></span>  Find nearest authorized workshop</button>
+                        </div>
+                        <div class="col-md-5 warranty-img">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/063YJmFnWIw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div class="warranties col-md-12">
+                        <h4>Insurance</h4>
+                        <hr>
+                        <h2><b>Freedom to move.</b></h2>
+                    </div>
+                    <div class="warranty-repair col-md-12">
+                        <div class="col-md-6 warranty-img">
+                            <img src="/img/baohanh4.jpeg" height="452" width="600">
+
+                        </div>
+                        <div class="col-md-5 warranty-container">
+                            <h3>Superb cover comes from Mercedes-Benz Insurance</h3>
+                            <br>
+                            <p>Carrio Motor Car Insurance is an exclusively designed package for Carrio Motor drivers. As privilege as your vehicle, you will be entitled to:</p>
+                            <br>
+                            <ul>
+                                <li>The most comprehensive coverage, including hydraulic stroke insurance.</li>
+                                <li>Repair at Carrio Motor garages nationwide.</li>
+                                <li>Replacement of brand-new genuine spare parts.</li>
+                                <li>Up to 2 claims per year for partial theft coverage.</li>
+                                <li>New vehicle replacement for total loss occurring within 12 months from the purchasing date of the new vehicle.</li>
+                                <li>24/7 road assistance service (provision of information; free towing service to the nearest Mercedes-Benz garage.</li>
+                                <li>24/7 dedicated Customer Service Center 0329.226.456 (toll-free).</li>
+                                <li>Special offers for Personal Accident and Voluntary Third Party Liability insurance.</li>
+                                <li>Up to 45% max discount on renewal premiums for safe driving customers.</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </article>
         </div>
