--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -36,5 +36,26 @@
                 </div>
 
         </div>
-
+        <!-- import icon font awesome -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+        <!-- Import thư viện JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script>
+                // kéo xuống khoảng cách 500px thì xuất hiện nút Top-up
+                var offset = 500;
+                // thời gian di trượt 0.75s ( 1000 = 1s )
+                var duration = 750;
+                $(function(){
+                        $(window).scroll(function () {
+                                if ($(this).scrollTop() > offset)
+                                        $('#top-up').fadeIn(duration);else
+                                        $('#top-up').fadeOut(duration);
+                        });
+                        $('#top-up').click(function () {
+                                $('body,html').animate({scrollTop: 0}, duration);
+                        });
+                });
+        </script>
+        <div title="Về đầu trang" id="top-up">
+                <i class="fas fa-chevron-circle-up"></i></div>x
 </footer>
